# RSBench

./: .gitignore  CMakeLists.txt
cmake/: FindPAPI.cmake
src/: CMakeLists.txt  init.c  main.c  rsbench.h
